# EMPE

./: CMakeLists.txt  README.md  TODO.md  links.md  main.cpp
.github/workflows/: build.yml
src/: ThreadSafeQueue.cpp  ThreadSafeQueue.h  atomic_vars.cpp  atomic_vars.h  connection.cpp  connection.h  counter.cpp  counter.h  serial_read.cpp  serial_read.h  serial_search.cpp  serial_search.h  settings_manager.cpp  settings_manager.h  window.cpp  window.h
src/windowing/: counter_window.cpp  counter_window.h  graph_window.cpp  graph_window.h  licenses.cpp  licenses.h  settings_window.cpp  settings_window.h  window.cpp  window.h
third_party_licenses/: LICENSE_gtkchart.txt  LICENSE_serial_cpp.txt
